--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>问卷材料导航页</title>
+  <title>问卷材料导航页 / Survey Materials Navigation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -69,48 +69,56 @@
       color: inherit;
       display: block;
     }
+    .lang-note {
+      text-align: center;
+      color: #8a99b8;
+      font-size: 0.98em;
+      margin-bottom: 28px;
+      margin-top: -16px;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>问卷材料导航页</h1>
+    <h1>问卷材料导航页<br><span style="font-size:0.75em; font-weight:400;">Survey Materials Navigation</span></h1>
+    <div class="lang-note">请选择相应材料进入体验<br>Select the corresponding material to continue</div>
     <div class="card-list">
       <a href="index6.html">
         <div class="card">
-          <div class="card-title">材料一</div>
-          <div class="card-desc">中国组（中文）</div>
+          <div class="card-title">材料一<br><span style="font-weight:400;">Material 1</span></div>
+          <div class="card-desc">中国组（中文）<br><span style="font-weight:400;">China Group (Chinese)</span></div>
         </div>
       </a>
       <a href="index2.html">
         <div class="card">
-          <div class="card-title">材料二</div>
-          <div class="card-desc">中国组（英文）</div>
+          <div class="card-title">材料二<br><span style="font-weight:400;">Material 2</span></div>
+          <div class="card-desc">中国组（英文）<br><span style="font-weight:400;">China Group (English)</span></div>
         </div>
       </a>
       <a href="index3.html">
         <div class="card">
-          <div class="card-title">材料三</div>
-          <div class="card-desc">英国组（英文）</div>
+          <div class="card-title">材料三<br><span style="font-weight:400;">Material 3</span></div>
+          <div class="card-desc">英国组（英文）<br><span style="font-weight:400;">UK Group (English)</span></div>
         </div>
       </a>
       <a href="index4.html">
         <div class="card">
-          <div class="card-title">材料四</div>
-          <div class="card-desc">通用组（英文）</div>
+          <div class="card-title">材料四<br><span style="font-weight:400;">Material 4</span></div>
+          <div class="card-desc">通用组（英文）<br><span style="font-weight:400;">General Group (English)</span></div>
         </div>
       </a>
       <a href="index5.html">
         <div class="card">
-          <div class="card-title">材料五</div>
-          <div class="card-desc">通用组（中文）</div>
+          <div class="card-title">材料五<br><span style="font-weight:400;">Material 5</span></div>
+          <div class="card-desc">通用组（中文）<br><span style="font-weight:400;">General Group (Chinese)</span></div>
         </div>
       </a>
-    <a href="feedback.html">
-  <div class="card">
-    <div class="card-title">意见反馈</div>
-    <div class="card-desc">提交你的建议或遇到的问题</div>
-  </div>
-</a>
+      <a href="feedback.html">
+        <div class="card">
+          <div class="card-title">意见反馈<br><span style="font-weight:400;">Feedback</span></div>
+          <div class="card-desc">提交你的建议或遇到的问题<br><span style="font-weight:400;">Submit your suggestions or issues</span></div>
+        </div>
+      </a>
     </div>
   </div>
 </body>
