--- a/feedback.html
+++ b/feedback.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>意见反馈</title>
+  <title>意见反馈 / Feedback</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body { background: #f6f8fa; font-family: "PingFang SC", Arial, sans-serif; margin:0; }
@@ -32,14 +32,19 @@
 </head>
 <body>
   <div class="container">
-    <h2>意见反馈</h2>
+    <h2>意见反馈<br><span style="font-weight:400; font-size:0.8em;">Feedback</span></h2>
     <div class="desc">
       如你在体验本网页过程中有任何建议、bug或疑问，欢迎点击下方按钮在 GitHub Issues 提交反馈。<br>
+      <span style="color:#b6bbd1;">If you have any suggestions, bugs, or questions during your experience, please click the button below to submit feedback via GitHub Issues.</span>
     </div>
     <a class="git-btn" href="https://github.com/No9WhaleFall/survey-materials/issues" target="_blank">
-      去 GitHub 提交反馈
+      去 GitHub 提交反馈<br>
+      <span style="font-weight:400; font-size:0.92em;">Submit Feedback on GitHub</span>
     </a>
-    <div class="tips">如不能访问 GitHub，可通过微信、邮箱等其他方式联系作者。</div>
+    <div class="tips">
+      如不能访问 GitHub，可通过微信、邮箱等其他方式联系作者。<br>
+      <span style="color:#b6bbd1;">If you cannot access GitHub, you may also contact the author via WeChat, email, or other methods.</span>
+    </div>
   </div>
 </body>
 </html>
