--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>问卷材料导航页 / Survey Materials Navigation</title>
+  <title>问卷材料 / Survey Materials </title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
