--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
   <meta charset="UTF-8">
-  <title>问卷材料 / Survey Materials </title>
+  <title>问卷材料导航页 / Survey Materials Start Pages</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -80,7 +80,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>问卷材料导航页<br><span style="font-size:0.75em; font-weight:400;">Survey Materials Navigation</span></h1>
+    <h1>问卷材料<br><span style="font-size:0.75em; font-weight:400;">Survey Materials</span></h1>
     <div class="lang-note">请选择相应材料进入体验<br>Select the corresponding material to continue</div>
     <div class="card-list">
       <a href="index6.html">
