--- a/index2.html
+++ b/index2.html
@@ -11,11 +11,11 @@
   <script src="https://cdn.jsdelivr.net/npm/meting@2.0.1/dist/Meting.min.js"></script>
   <style>
     .center-text {
-  text-align: center !important;
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
+      text-align: center !important;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
+    }
     body {
       background-color: #f8efe6;
       background-image: url('卷云纹.png');
@@ -93,18 +93,19 @@
       margin: 30px 0 22px 0;
     }
     .product-card {
-      flex: 1 1 420px;
-      max-width: 500px;
-      min-width: 295px;
+      flex: 1 1 320px;
+      max-width: 370px;
+      min-width: 220px;
       background: #fff6f0ee;
       border-radius: 16px;
       padding: 18px 20px 16px 20px;
       box-shadow: 0 2px 12px #cead4c18;
       border: 1.5px solid #e9c769;
       display: flex;
+      flex-direction: column;
       align-items: center;
-      gap: 16px;
-      min-height: 96px;
+      gap: 14px;
+      min-height: 320px;
       transition: box-shadow 0.2s;
       position: relative;
       margin-bottom: 0;
@@ -113,8 +114,9 @@
       box-shadow: 0 6px 24px #c4241c22;
     }
     .product-img {
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      max-width: 320px;
+      height: auto;
       background: #fff4ea;
       border-radius: 12px;
       border: 1.2px solid #e9c769;
@@ -124,15 +126,21 @@
       font-size: 1.05rem;
       color: #b67d2f;
       font-family: 'Montserrat', Arial, sans-serif;
-      flex-shrink: 0;
-      margin-right: 10px;
+      margin: 0 auto 10px auto;
+      overflow: hidden;
+    }
+    .product-img img {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 12px;
     }
     .product-info {
-      flex: 1;
-      min-width: 0;
+      width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
     }
     .product-title {
       color: #a30d13;
@@ -141,17 +149,19 @@
       margin-bottom: 4px;
       font-family: 'Noto Serif SC', serif;
       white-space: normal;
-  overflow: visible;
-  text-overflow: initial;
+      overflow: visible;
+      text-overflow: initial;
+      text-align: center;
     }
     .product-desc {
       font-size: 0.99rem;
       color: #77411c;
       margin-bottom: 6px;
       font-family: 'Noto Serif SC', serif;
-    white-space: normal;
-  overflow: visible;
-  text-overflow: initial;
+      white-space: normal;
+      overflow: visible;
+      text-overflow: initial;
+      text-align: center;
     }
     .product-price {
       color: #cead4c;
@@ -159,11 +169,11 @@
       margin-top: 1px;
       font-weight: 600;
       font-family: 'Montserrat', Arial, sans-serif;
+      text-align: center;
     }
     .btn {
       display: inline-block;
-      margin-left: 20px;
-      margin-top: 18px;
+      margin-top: 14px;
       padding: 9px 22px;
       background: linear-gradient(90deg, #cead4c 60%, #e74a2f 100%);
       color: #fff;
@@ -200,80 +210,81 @@
     }
     @media (max-width: 950px) {
       .container { padding: 16px 2vw; }
-      .product-card { min-width: 220px; }
+      .product-card { min-width: 180px; }
     }
     @media (max-width: 800px) {
       .container { max-width: 99vw; }
       .product-list { flex-direction: column; gap: 18px; }
       .product-card { max-width: 99vw; min-width: 0; }
+      .product-img { max-width: 99vw; }
     }
     @media (max-width: 600px) {
       .container { padding: 7px 0; }
       .title-main, .title-sub { font-size: 1.13rem; }
-      .product-card { flex-direction: column; gap: 8px; padding: 14px 8px; }
-      .product-img { width: 56px; height: 56px; }
+      .product-card { padding: 14px 8px; }
+      .product-img { max-width: 99vw; }
       .btn, .more-btn { font-size: 0.99rem; padding: 7px 12px;}
     }
-  .music-tip {
-  position: fixed;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: rgba(34,34,34, 0.93);
-  color: #fff;
-  padding: 22px 36px 18px 36px;
-  border-radius: 16px;
-  font-size: 1.18rem;
-  font-family: 'Montserrat', 'Noto Serif SC', serif;
-  box-shadow: 0 4px 24px #2227;
-  z-index: 9999;
-  text-align: center;
-  pointer-events: none;
-  opacity: 1;
-  transition: opacity 0.6s;
-}
-.music-tip.hide {
-  opacity: 0;
-  pointer-events: none;
-}
-  .survey-desc {
-  margin: 0 0 26px 0;
-  padding-left: 1.6em;
-  color: #a30d13;
-  font-size: 1.14rem;
-  line-height: 1.7;
-  font-family: 'Noto Serif SC', serif;
-  text-align: left;
-  max-width: 900px;
-}
-.survey-desc li {
-  margin-bottom: 8px;
-  list-style-type: disc;
-}
-@media (max-width: 600px) {
-  .survey-desc { font-size: 1.01rem; padding-left: 1.2em;}
-}
+    .music-tip {
+      position: fixed;
+      top: 30%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(34,34,34, 0.93);
+      color: #fff;
+      padding: 22px 36px 18px 36px;
+      border-radius: 16px;
+      font-size: 1.18rem;
+      font-family: 'Montserrat', 'Noto Serif SC', serif;
+      box-shadow: 0 4px 24px #2227;
+      z-index: 9999;
+      text-align: center;
+      pointer-events: none;
+      opacity: 1;
+      transition: opacity 0.6s;
+    }
+    .music-tip.hide {
+      opacity: 0;
+      pointer-events: none;
+    }
+    .survey-desc {
+      margin: 0 0 26px 0;
+      padding-left: 1.6em;
+      color: #a30d13;
+      font-size: 1.14rem;
+      line-height: 1.7;
+      font-family: 'Noto Serif SC', serif;
+      text-align: left;
+      max-width: 900px;
+    }
+    .survey-desc li {
+      margin-bottom: 8px;
+      list-style-type: disc;
+    }
+    @media (max-width: 600px) {
+      .survey-desc { font-size: 1.01rem; padding-left: 1.2em;}
+    }
   </style>
 </head>
 <body>
   <div id="music-tip" class="music-tip">
-  <span style="font-size:0.98em;color:#aaa;">Please tap anywhere to enable background music.</span>
-</div>
+    <span style="font-size:0.98em;color:#aaa;">Please tap anywhere to enable background music.</span>
+  </div>
   <div class="navbar">Experimental Material A for Survey</div>
   <div class="container">
     <span class="title-main">Simulation of Cross-Cultural Sensory Stimulation and Online Shopping Experiences:</span>
     <span class="title-sub">Page and Music Sensory Stimulation</span>
     <ul class="survey-desc">
-  <li>Thank you for participating in this questionnaire!</li>
-  <li>This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping.</li>
-  <li>This page is for academic research purposes only, and all data will be kept strictly confidential.</li>
-  <li>Please carefully browse the page and listen to the background music, then answer the questionnaire based on your true experience.</li>
-</ul>
+      <li>Thank you for participating in this questionnaire!</li>
+      <li>This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping.</li>
+      <li>This page is for academic research purposes only, and all data will be kept strictly confidential.</li>
+      <li>Please carefully browse the page and listen to the background music, then answer the questionnaire based on your true experience.</li>
+    </ul>
     <div class="product-list">
       <div class="product-card">
-<div class="product-img">
-    <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
-  </div>
+        <div class="product-img">
+          <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
         <div class="product-info">
           <div class="product-title">Misty Hills Tote Bag</div>
           <div class="product-desc">Morning mountains and lake light, carry the natural tenderness along with the travelling.</div>
@@ -283,8 +294,8 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-    <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
-  </div>
+          <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
         <div class="product-info">
           <div class="product-title">Swan Reflection Glasses Cloth</div>
           <div class="product-desc">Swan and water reflection to brighten up a little daily cleaning.</div>
@@ -293,9 +304,9 @@
         </div>
       </div>
       <div class="product-card">
-<div class="product-img">
-    <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
-  </div>        
+        <div class="product-img">
+          <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
         <div class="product-info">
           <div class="product-title">Lighthouse Drawstring Pouch</div>
           <div class="product-desc">Coastal lighthouses and roads to organise your travel bits and pieces.</div>
@@ -304,9 +315,9 @@
         </div>
       </div>
       <div class="product-card">
-<div class="product-img">
-    <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
-  </div>
+        <div class="product-img">
+          <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
         <div class="product-info">
           <div class="product-title">Ripple Light Floor Mat</div>
           <div class="product-desc">Capture the moment the sunlight glints off the water and add a refreshing touch to your living space.</div>
@@ -315,9 +326,9 @@
         </div>
       </div>
       <div class="product-card">
-<div class="product-img">
-    <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
-  </div>
+        <div class="product-img">
+          <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
         <div class="product-info">
           <div class="product-title">Pasture Memory Glass Frame</div>
           <div class="product-desc">Freeze time in the pasture and the shadows of the trees.</div>
@@ -326,9 +337,9 @@
         </div>
       </div>
       <div class="product-card">
-<div class="product-img">
-    <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
-  </div>
+        <div class="product-img">
+          <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
         <div class="product-info">
           <div class="product-title">Nature Moments Bookmark</div>
           <div class="product-desc">Designed to mimic video film, recording three natural impressions full of storytelling at the same time.</div>
@@ -337,9 +348,9 @@
         </div>
       </div>
       <div class="product-card">
-<div class="product-img">
-    <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
-  </div>
+        <div class="product-img">
+          <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
         <div class="product-info">
           <div class="product-title">Landscape Journey Commemorative Coin</div>
           <div class="product-desc">Printed on both sides with nature scenes to memorise the unique impression of this journey.</div>
@@ -348,10 +359,10 @@
         </div>
       </div>
       <div class="product-card">
-<div class="product-img">
-    <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="width:100%; height:100%; object-fit:cover; border-radius: 12px;">
-  </div>
-                <div class="product-info">
+        <div class="product-img">
+          <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
+        <div class="product-info">
           <div class="product-title">Verdant Pastures Blanket</div>
           <div class="product-desc">Surrounded by greenery, enjoy your own time at rest.</div>
           <div class="product-price">¥300</div>
@@ -359,56 +370,57 @@
         </div>
       </div>
     </div>
-   <div class="survey-desc center-text">
-  Please return to the questionnaire<br>
-  Click the next section to continue completing the questionnaire
-</div>
-  <!-- NetEase Music BGM Player -->
-  <meting-js
-    server="netease"
-    type="song"
-    id="2065383797"
-    fixed="true"
-    autoplay="true"
-    loop="all"
-    order="list"
-    volume="0.5"
-  ></meting-js>
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-  var played = false;
-  var tip = document.getElementById('music-tip');
-  function playBGM() {
-    if (played) return;
-    var ap = document.querySelector('meting-js').aplayer;
-    if (ap) {
-      ap.audio.play();
-      played = true;
-      if (tip) {
-        tip.classList.add('hide');
-        setTimeout(function(){ tip.style.display = 'none'; }, 900);
-      }
-    } else {
-      setTimeout(playBGM, 500);
-    }
-  }
-  document.body.addEventListener('click', playBGM, { once: true });
-});
-</script>
-<div id="img-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.65); z-index:10000; justify-content:center; align-items:center;">
-  <img id="modal-img" src="" style="max-width:80vw; max-height:80vh; border-radius:16px; box-shadow:0 0 40px #0008;">
-</div>
-  <script>
-document.querySelectorAll('.enlarge-img').forEach(img => {
-  img.style.cursor = 'zoom-in';
-  img.onclick = () => {
-    document.getElementById('modal-img').src = img.src;
-    document.getElementById('img-modal').style.display = 'flex';
-  };
-});
-document.getElementById('img-modal').onclick = function(e) {
-  if (e.target === this) this.style.display = 'none';
-};
-</script>
+    <div class="survey-desc center-text">
+      Please return to the questionnaire<br>
+      Click the next section to continue completing the questionnaire
+    </div>
+    <!-- NetEase Music BGM Player -->
+    <meting-js
+      server="netease"
+      type="song"
+      id="2065383797"
+      fixed="true"
+      autoplay="true"
+      loop="all"
+      order="list"
+      volume="0.5"
+    ></meting-js>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var played = false;
+        var tip = document.getElementById('music-tip');
+        function playBGM() {
+          if (played) return;
+          var ap = document.querySelector('meting-js').aplayer;
+          if (ap) {
+            ap.audio.play();
+            played = true;
+            if (tip) {
+              tip.classList.add('hide');
+              setTimeout(function(){ tip.style.display = 'none'; }, 900);
+            }
+          } else {
+            setTimeout(playBGM, 500);
+          }
+        }
+        document.body.addEventListener('click', playBGM, { once: true });
+      });
+    </script>
+    <div id="img-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.65); z-index:10000; justify-content:center; align-items:center;">
+      <img id="modal-img" src="" style="max-width:80vw; max-height:80vh; border-radius:16px; box-shadow:0 0 40px #0008;">
+    </div>
+    <script>
+      document.querySelectorAll('.enlarge-img').forEach(img => {
+        img.style.cursor = 'zoom-in';
+        img.onclick = () => {
+          document.getElementById('modal-img').src = img.src;
+          document.getElementById('img-modal').style.display = 'flex';
+        };
+      });
+      document.getElementById('img-modal').onclick = function(e) {
+        if (e.target === this) this.style.display = 'none';
+      };
+    </script>
+  </div>
 </body>
 </html>
