--- a/index3.html
+++ b/index3.html
@@ -24,7 +24,7 @@
     .navbar {
       width: 100%;
       height: 56px;
-      background: #335ea8;
+      background: #004fa3;
       color: #fff;
       display: flex;
       align-items: center;
@@ -32,23 +32,23 @@
       letter-spacing: 2px;
       font-family: 'Montserrat', 'Noto Serif SC', serif;
       padding: 0 40px;
-      box-shadow: 0 4px 16px #335ea816;
+      box-shadow: 0 4px 16px #004fa316;
     }
     .container {
       max-width: 960px;
       margin: 48px auto 0 auto;
-      background: rgba(250, 250, 250, 0.97);
+      background: rgba(246, 249, 255, 0.97);
       border-radius: 24px;
-      box-shadow: 0 8px 32px #335ea824;
+      box-shadow: 0 8px 32px #b7d2ef44;
       padding: 34px 26px 38px 26px;
-      border: 3.5px solid #9ec3ea;
+      border: 3.5px solid #5d92ce;
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
     .title-main {
-      color: #335ea8;
+      color: #004fa3;
       font-size: 2.1rem;
       text-align: center;
       letter-spacing: 2.5px;
@@ -57,11 +57,11 @@
       margin-bottom: 0px;
       margin-top: 6px;
       line-height: 1.2;
-      text-shadow: 1px 1px 0 #e9f3ff;
+      text-shadow: 1px 1px 0 #eef3fc;
       display: block;
     }
     .title-sub {
-      color: #335ea8;
+      color: #004fa3;
       font-size: 2.1rem;
       text-align: center;
       letter-spacing: 2.5px;
@@ -70,13 +70,13 @@
       margin-bottom: 18px;
       margin-top: 0px;
       line-height: 1.2;
-      text-shadow: 1px 1px 0 #e9f3ff;
+      text-shadow: 1px 1px 0 #eef3fc;
       display: block;
     }
     p {
       font-size: 1.08rem;
       line-height: 1.7;
-      color: #26406d;
+      color: #17559b;
       text-align: center;
       font-family: 'Noto Serif SC', serif;
       margin: 0 0 22px 0;
@@ -93,11 +93,11 @@
       flex: 1 1 320px;
       max-width: 370px;
       min-width: 220px;
-      background: #f5f8fd;
+      background: #f6f9ff;
       border-radius: 16px;
       padding: 18px 20px 16px 20px;
-      box-shadow: 0 2px 12px #335ea816;
-      border: 1.5px solid #9ec3ea;
+      box-shadow: 0 2px 12px #5d92ce22;
+      border: 1.5px solid #b7d2ef;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -108,20 +108,20 @@
       margin-bottom: 0;
     }
     .product-card:hover {
-      box-shadow: 0 6px 24px #335ea822;
+      box-shadow: 0 6px 24px #004fa322;
     }
     .product-img {
       width: 100%;
       max-width: 320px;
       height: auto;
-      background: #eaf2fa;
+      background: #f2f6fa;
       border-radius: 12px;
-      border: 1.2px solid #9ec3ea;
+      border: 1.2px solid #b7d2ef;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 1.05rem;
-      color: #335ea8;
+      color: #5d92ce;
       font-family: 'Montserrat', Arial, sans-serif;
       margin: 0 auto 10px auto;
       overflow: hidden;
@@ -140,7 +140,7 @@
       align-items: center;
     }
     .product-title {
-      color: #335ea8;
+      color: #004fa3;
       font-weight: bold;
       font-size: 1.13rem;
       margin-bottom: 4px;
@@ -152,7 +152,7 @@
     }
     .product-desc {
       font-size: 0.99rem;
-      color: #4977a8;
+      color: #4a5a70;
       margin-bottom: 6px;
       font-family: 'Noto Serif SC', serif;
       white-space: normal;
@@ -161,7 +161,7 @@
       text-align: center;
     }
     .product-price {
-      color: #335ea8;
+      color: #004fa3;
       font-size: 1.09rem;
       margin-top: 1px;
       font-weight: 600;
@@ -172,7 +172,7 @@
       display: inline-block;
       margin-top: 14px;
       padding: 9px 22px;
-      background: linear-gradient(90deg, #335ea8 60%, #9ec3ea 100%);
+      background: linear-gradient(90deg, #5d92ce 60%, #004fa3 100%);
       color: #fff;
       border-radius: 30px;
       font-weight: bold;
@@ -180,30 +180,30 @@
       border: none;
       letter-spacing: 1.2px;
       cursor: pointer;
-      box-shadow: 0 2px 8px #335ea833;
+      box-shadow: 0 2px 8px #b7d2ef33;
       transition: background .3s;
       white-space: normal;
     }
     .btn:hover {
-      background: linear-gradient(90deg, #4977a8, #335ea8 100%);
+      background: linear-gradient(90deg, #004fa3, #5d92ce 100%);
     }
     .more-btn {
       display: block;
       margin: 16px auto 0 auto;
       padding: 10px 36px;
       font-size: 1.08rem;
-      background: linear-gradient(90deg, #335ea8 60%, #9ec3ea 100%);
+      background: linear-gradient(90deg, #5d92ce 50%, #004fa3 100%);
       border-radius: 30px;
       color: #fff;
       border: none;
       font-weight: bold;
       letter-spacing: 1.2px;
       cursor: pointer;
-      box-shadow: 0 3px 12px #335ea822;
+      box-shadow: 0 3px 12px #004fa322;
       transition: background .3s;
     }
     .more-btn:hover {
-      background: linear-gradient(90deg, #4977a8, #335ea8 100%);
+      background: linear-gradient(90deg, #004fa3, #5d92ce 100%);
     }
     @media (max-width: 950px) {
       .container { padding: 16px 2vw; }
@@ -227,13 +227,13 @@
       top: 30%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(34,34,34, 0.93);
+      background: rgba(0,79,163, 0.93);
       color: #fff;
       padding: 22px 36px 18px 36px;
       border-radius: 16px;
       font-size: 1.18rem;
       font-family: 'Montserrat', 'Noto Serif SC', serif;
-      box-shadow: 0 4px 24px #2227;
+      box-shadow: 0 4px 24px #004fa377;
       z-index: 9999;
       text-align: center;
       pointer-events: none;
@@ -247,7 +247,7 @@
     .survey-desc {
       margin: 0 0 26px 0;
       padding-left: 1.6em;
-      color: #335ea8;
+      color: #004fa3;
       font-size: 1.14rem;
       line-height: 1.7;
       font-family: 'Noto Serif SC', serif;
@@ -289,8 +289,83 @@
           <button class="btn">Buy Now</button>
         </div>
       </div>
-      <!-- 其余7个商品卡片依次复制上面结构，只改图片/名称/描述/价格/按钮文本即可，保持图片在上信息在下 -->
-      <!-- ...（此处省略7个，实际需填全）... -->
+      <div class="product-card">
+        <div class="product-img">
+          <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
+        <div class="product-info">
+          <div class="product-title">Swan Reflection Glasses Cloth</div>
+          <div class="product-desc">Swan and water reflection to brighten up a little daily cleaning.</div>
+          <div class="product-price">£9.50</div>
+          <button class="btn">Add to Basket</button>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-img">
+          <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
+        <div class="product-info">
+          <div class="product-title">Lighthouse Drawstring Pouch</div>
+          <div class="product-desc">Coastal lighthouses and roads to organise your travel bits and pieces.</div>
+          <div class="product-price">£18.00</div>
+          <button class="btn">Buy Now</button>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-img">
+          <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
+        <div class="product-info">
+          <div class="product-title">Ripple Light Floor Mat</div>
+          <div class="product-desc">Capture the moment the sunlight glints off the water and add a refreshing touch to your living space.</div>
+          <div class="product-price">£23.00</div>
+          <button class="btn">Add to Basket</button>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-img">
+          <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
+        <div class="product-info">
+          <div class="product-title">Pasture Memory Glass Frame</div>
+          <div class="product-desc">Freeze time in the pasture and the shadows of the trees.</div>
+          <div class="product-price">£10.50</div>
+          <button class="btn">Buy Now</button>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-img">
+          <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
+        <div class="product-info">
+          <div class="product-title">Nature Moments Bookmark</div>
+          <div class="product-desc">Designed to mimic video film, recording three natural impressions full of storytelling at the same time.</div>
+          <div class="product-price">£8.50</div>
+          <button class="btn">Add to Basket</button>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-img">
+          <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
+        <div class="product-info">
+          <div class="product-title">Landscape Journey Commemorative Coin</div>
+          <div class="product-desc">Printed on both sides with nature scenes to memorise the unique impression of this journey.</div>
+          <div class="product-price">£11.00</div>
+          <button class="btn">Buy Now</button>
+        </div>
+      </div>
+      <div class="product-card">
+        <div class="product-img">
+          <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="cursor:zoom-in;">
+        </div>
+        <div class="product-info">
+          <div class="product-title">Verdant Pastures Blanket</div>
+          <div class="product-desc">Surrounded by greenery, enjoy your own time at rest.</div>
+          <div class="product-price">£30.00</div>
+          <button class="btn">Add to Basket</button>
+        </div>
+      </div>
     </div>
     <div class="survey-desc center-text">
       Please return to the questionnaire<br>
