--- a/index3.html
+++ b/index3.html
@@ -17,14 +17,17 @@
       margin-right: auto;
     }
     body {
-      background-color: #fff;
+      background-color: #f3f7fb;
+      background-image: url('蓝白格子.png');
+      background-repeat: repeat;
+      background-size: 340px auto;
       margin: 0;
       min-height: 100vh;
     }
     .navbar {
       width: 100%;
       height: 56px;
-      background: #004fa3;
+      background: #1a347a;
       color: #fff;
       display: flex;
       align-items: center;
@@ -32,23 +35,23 @@
       letter-spacing: 2px;
       font-family: 'Montserrat', 'Noto Serif SC', serif;
       padding: 0 40px;
-      box-shadow: 0 4px 16px #004fa316;
+      box-shadow: 0 4px 16px #1a347a16;
     }
     .container {
       max-width: 960px;
       margin: 48px auto 0 auto;
-      background: rgba(246, 249, 255, 0.97);
+      background: rgba(255, 255, 255, 0.97);
       border-radius: 24px;
-      box-shadow: 0 8px 32px #b7d2ef44;
+      box-shadow: 0 8px 32px #1a347a24;
       padding: 34px 26px 38px 26px;
-      border: 3.5px solid #5d92ce;
+      border: 3.5px solid #3b568f;
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
     .title-main {
-      color: #004fa3;
+      color: #3b568f;
       font-size: 2.1rem;
       text-align: center;
       letter-spacing: 2.5px;
@@ -57,11 +60,11 @@
       margin-bottom: 0px;
       margin-top: 6px;
       line-height: 1.2;
-      text-shadow: 1px 1px 0 #eef3fc;
+      text-shadow: 1px 1px 0 #e5ecf7;
       display: block;
     }
     .title-sub {
-      color: #004fa3;
+      color: #3b568f;
       font-size: 2.1rem;
       text-align: center;
       letter-spacing: 2.5px;
@@ -70,13 +73,13 @@
       margin-bottom: 18px;
       margin-top: 0px;
       line-height: 1.2;
-      text-shadow: 1px 1px 0 #eef3fc;
+      text-shadow: 1px 1px 0 #e5ecf7;
       display: block;
     }
     p {
       font-size: 1.08rem;
       line-height: 1.7;
-      color: #17559b;
+      color: #193063;
       text-align: center;
       font-family: 'Noto Serif SC', serif;
       margin: 0 0 22px 0;
@@ -93,11 +96,11 @@
       flex: 1 1 320px;
       max-width: 370px;
       min-width: 220px;
-      background: #f6f9ff;
+      background: #f5f8fcf0;
       border-radius: 16px;
       padding: 18px 20px 16px 20px;
-      box-shadow: 0 2px 12px #5d92ce22;
-      border: 1.5px solid #b7d2ef;
+      box-shadow: 0 2px 12px #1a347a15;
+      border: 1.5px solid #b8cbe9;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -108,20 +111,20 @@
       margin-bottom: 0;
     }
     .product-card:hover {
-      box-shadow: 0 6px 24px #004fa322;
+      box-shadow: 0 6px 24px #1a347a24;
     }
     .product-img {
       width: 100%;
       max-width: 320px;
       height: auto;
-      background: #f2f6fa;
+      background: #e8eef8;
       border-radius: 12px;
-      border: 1.2px solid #b7d2ef;
+      border: 1.2px solid #b8cbe9;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 1.05rem;
-      color: #5d92ce;
+      color: #3b568f;
       font-family: 'Montserrat', Arial, sans-serif;
       margin: 0 auto 10px auto;
       overflow: hidden;
@@ -140,7 +143,7 @@
       align-items: center;
     }
     .product-title {
-      color: #004fa3;
+      color: #1a347a;
       font-weight: bold;
       font-size: 1.13rem;
       margin-bottom: 4px;
@@ -152,7 +155,7 @@
     }
     .product-desc {
       font-size: 0.99rem;
-      color: #4a5a70;
+      color: #3b568f;
       margin-bottom: 6px;
       font-family: 'Noto Serif SC', serif;
       white-space: normal;
@@ -161,7 +164,7 @@
       text-align: center;
     }
     .product-price {
-      color: #004fa3;
+      color: #1a347a;
       font-size: 1.09rem;
       margin-top: 1px;
       font-weight: 600;
@@ -172,7 +175,7 @@
       display: inline-block;
       margin-top: 14px;
       padding: 9px 22px;
-      background: linear-gradient(90deg, #5d92ce 60%, #004fa3 100%);
+      background: linear-gradient(90deg, #4a7bd4 60%, #193063 100%);
       color: #fff;
       border-radius: 30px;
       font-weight: bold;
@@ -180,30 +183,30 @@
       border: none;
       letter-spacing: 1.2px;
       cursor: pointer;
-      box-shadow: 0 2px 8px #b7d2ef33;
+      box-shadow: 0 2px 8px #4a7bd433;
       transition: background .3s;
       white-space: normal;
     }
     .btn:hover {
-      background: linear-gradient(90deg, #004fa3, #5d92ce 100%);
+      background: linear-gradient(90deg, #193063 60%, #4a7bd4 100%);
     }
     .more-btn {
       display: block;
       margin: 16px auto 0 auto;
       padding: 10px 36px;
       font-size: 1.08rem;
-      background: linear-gradient(90deg, #5d92ce 50%, #004fa3 100%);
+      background: linear-gradient(90deg, #4a7bd4 50%, #193063 100%);
       border-radius: 30px;
       color: #fff;
       border: none;
       font-weight: bold;
       letter-spacing: 1.2px;
       cursor: pointer;
-      box-shadow: 0 3px 12px #004fa322;
+      box-shadow: 0 3px 12px #4a7bd433;
       transition: background .3s;
     }
     .more-btn:hover {
-      background: linear-gradient(90deg, #004fa3, #5d92ce 100%);
+      background: linear-gradient(90deg, #193063 50%, #4a7bd4 100%);
     }
     @media (max-width: 950px) {
       .container { padding: 16px 2vw; }
@@ -227,13 +230,13 @@
       top: 30%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(0,79,163, 0.93);
+      background: rgba(34,34,34, 0.93);
       color: #fff;
       padding: 22px 36px 18px 36px;
       border-radius: 16px;
       font-size: 1.18rem;
       font-family: 'Montserrat', 'Noto Serif SC', serif;
-      box-shadow: 0 4px 24px #004fa377;
+      box-shadow: 0 4px 24px #2227;
       z-index: 9999;
       text-align: center;
       pointer-events: none;
@@ -247,7 +250,7 @@
     .survey-desc {
       margin: 0 0 26px 0;
       padding-left: 1.6em;
-      color: #004fa3;
+      color: #3b568f;
       font-size: 1.14rem;
       line-height: 1.7;
       font-family: 'Noto Serif SC', serif;
@@ -265,13 +268,13 @@
 </head>
 <body>
   <div id="music-tip" class="music-tip">
-    <span style="font-size:0.98em;color:#aaa;">Please tap anywhere to enable background music.</span>
+    <span style="font-size:0.98em;color:#aaa;">Please click anywhere to enable background music</span>
   </div>
   <div class="navbar">Experimental Material B for Survey</div>
   <div class="container">
     <span class="title-main">Simulation of Cross-Cultural Sensory Stimulation and Online Shopping Experiences:</span>
     <span class="title-sub">Page and Music Sensory Stimulation</span>
-    <ul class="survey-desc">
+   <ul class="survey-desc">
       <li>Thank you for participating in this questionnaire!</li>
       <li>This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping.</li>
       <li>This page is for academic research purposes only, and all data will be kept strictly confidential.</li>
@@ -280,7 +283,7 @@
     <div class="product-list">
       <div class="product-card">
         <div class="product-img">
-          <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="cursor:zoom-in;">
+          <img src="Product1.JPG" alt="Product 1" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Misty Hills Tote Bag</div>
@@ -291,7 +294,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="cursor:zoom-in;">
+          <img src="Product2.JPG" alt="Product 2" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Swan Reflection Glasses Cloth</div>
@@ -302,7 +305,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="cursor:zoom-in;">
+          <img src="Product3.JPG" alt="Product 3" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Lighthouse Drawstring Pouch</div>
@@ -313,7 +316,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="cursor:zoom-in;">
+          <img src="Product4.JPG" alt="Product 4" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Ripple Light Floor Mat</div>
@@ -324,7 +327,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="cursor:zoom-in;">
+          <img src="Product5.JPG" alt="Product 5" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Pasture Memory Glass Frame</div>
@@ -335,7 +338,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="cursor:zoom-in;">
+          <img src="Product6.JPG" alt="Product 6" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Nature Moments Bookmark</div>
@@ -346,7 +349,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="cursor:zoom-in;">
+          <img src="Product7.JPG" alt="Product 7" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Landscape Journey Commemorative Coin</div>
@@ -357,7 +360,7 @@
       </div>
       <div class="product-card">
         <div class="product-img">
-          <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="cursor:zoom-in;">
+          <img src="Product8.JPG" alt="Product 8" class="enlarge-img" style="width:100%; height:auto; object-fit:cover; border-radius: 12px;">
         </div>
         <div class="product-info">
           <div class="product-title">Verdant Pastures Blanket</div>
@@ -375,7 +378,7 @@
     <meting-js
       server="netease"
       type="song"
-      id="2065383797"
+      id="1445203309"
       fixed="true"
       autoplay="true"
       loop="all"
