--- a/index4.html
+++ b/index4.html
@@ -17,17 +17,14 @@
       margin-right: auto;
     }
     body {
-      background-color: #f7f4ee;
-      background-image: url('米白格子.png');
-      background-repeat: repeat;
-      background-size: 340px auto;
+      background-color: #fff;
       margin: 0;
       min-height: 100vh;
     }
     .navbar {
       width: 100%;
       height: 56px;
-      background: #ba9855;
+      background: #232325;
       color: #fff;
       display: flex;
       align-items: center;
@@ -35,23 +32,23 @@
       letter-spacing: 2px;
       font-family: 'Montserrat', 'Noto Serif SC', serif;
       padding: 0 40px;
-      box-shadow: 0 4px 16px #ba985516;
+      box-shadow: 0 4px 16px #23232516;
     }
     .container {
       max-width: 960px;
       margin: 48px auto 0 auto;
-      background: rgba(255, 255, 255, 0.97);
+      background: rgba(250, 250, 250, 0.97);
       border-radius: 24px;
-      box-shadow: 0 8px 32px #ba985524;
+      box-shadow: 0 8px 32px #5552;
       padding: 34px 26px 38px 26px;
-      border: 3.5px solid #beaf90;
+      border: 3.5px solid #bfc0c1;
       position: relative;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
     .title-main {
-      color: #ba9855;
+      color: #232325;
       font-size: 2.1rem;
       text-align: center;
       letter-spacing: 2.5px;
@@ -60,11 +57,11 @@
       margin-bottom: 0px;
       margin-top: 6px;
       line-height: 1.2;
-      text-shadow: 1px 1px 0 #ede5cd;
+      text-shadow: 1px 1px 0 #ededed;
       display: block;
     }
     .title-sub {
-      color: #ba9855;
+      color: #232325;
       font-size: 2.1rem;
       text-align: center;
       letter-spacing: 2.5px;
@@ -73,13 +70,13 @@
       margin-bottom: 18px;
       margin-top: 0px;
       line-height: 1.2;
-      text-shadow: 1px 1px 0 #ede5cd;
+      text-shadow: 1px 1px 0 #ededed;
       display: block;
     }
     p {
       font-size: 1.08rem;
       line-height: 1.7;
-      color: #90763c;
+      color: #343434;
       text-align: center;
       font-family: 'Noto Serif SC', serif;
       margin: 0 0 22px 0;
@@ -93,38 +90,38 @@
       margin: 30px 0 22px 0;
     }
     .product-card {
-      flex: 1 1 320px;
-      max-width: 370px;
-      min-width: 220px;
-      background: #f8f5ecee;
+      flex: 1 1 420px;
+      max-width: 440px;
+      min-width: 295px;
+      background: #f4f4f5;
       border-radius: 16px;
       padding: 18px 20px 16px 20px;
-      box-shadow: 0 2px 12px #beaf9015;
-      border: 1.5px solid #f1e5c4;
+      box-shadow: 0 2px 12px #2221;
+      border: 1.5px solid #d8d8d8;
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 14px;
-      min-height: 320px;
+      gap: 16px;
+      min-height: 96px;
       transition: box-shadow 0.2s;
       position: relative;
       margin-bottom: 0;
     }
     .product-card:hover {
-      box-shadow: 0 6px 24px #ba985524;
+      box-shadow: 0 6px 24px #34343422;
     }
     .product-img {
       width: 100%;
       max-width: 320px;
       height: auto;
-      background: #faf7f0;
+      background: #ededed;
       border-radius: 12px;
-      border: 1.2px solid #f1e5c4;
+      border: 1.2px solid #d8d8d8;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 1.05rem;
-      color: #ba9855;
+      color: #858585;
       font-family: 'Montserrat', Arial, sans-serif;
       margin: 0 auto 10px auto;
       overflow: hidden;
@@ -143,19 +140,19 @@
       align-items: center;
     }
     .product-title {
-      color: #ba9855;
+      color: #232325;
       font-weight: bold;
       font-size: 1.13rem;
       margin-bottom: 4px;
       font-family: 'Noto Serif SC', serif;
       white-space: normal;
-      overflow: visible;
-      text-overflow: initial;
+      overflow: hidden;
+      text-overflow: ellipsis;
       text-align: center;
     }
     .product-desc {
       font-size: 0.99rem;
-      color: #90763c;
+      color: #6b6b6b;
       margin-bottom: 6px;
       font-family: 'Noto Serif SC', serif;
       white-space: normal;
@@ -164,7 +161,7 @@
       text-align: center;
     }
     .product-price {
-      color: #ba9855;
+      color: #343434;
       font-size: 1.09rem;
       margin-top: 1px;
       font-weight: 600;
@@ -173,9 +170,9 @@
     }
     .btn {
       display: inline-block;
-      margin-top: 14px;
+      margin-top: 18px;
       padding: 9px 22px;
-      background: linear-gradient(90deg, #e2c670 60%, #ba9855 100%);
+      background: linear-gradient(90deg, #232325 70%, #9b9b9b 100%);
       color: #fff;
       border-radius: 30px;
       font-weight: bold;
@@ -183,34 +180,34 @@
       border: none;
       letter-spacing: 1.2px;
       cursor: pointer;
-      box-shadow: 0 2px 8px #beaf9033;
+      box-shadow: 0 2px 8px #23232533;
       transition: background .3s;
-      white-space: normal;
+      white-space: nowrap;
     }
     .btn:hover {
-      background: linear-gradient(90deg, #ba9855, #e2c670 100%);
+      background: linear-gradient(90deg, #555 60%, #232325 100%);
     }
     .more-btn {
       display: block;
       margin: 16px auto 0 auto;
       padding: 10px 36px;
       font-size: 1.08rem;
-      background: linear-gradient(90deg, #e2c670 50%, #ba9855 100%);
+      background: linear-gradient(90deg, #343434 60%, #9b9b9b 100%);
       border-radius: 30px;
       color: #fff;
       border: none;
       font-weight: bold;
       letter-spacing: 1.2px;
       cursor: pointer;
-      box-shadow: 0 3px 12px #beaf9033;
+      box-shadow: 0 3px 12px #23232522;
       transition: background .3s;
     }
     .more-btn:hover {
-      background: linear-gradient(90deg, #ba9855, #e2c670 100%);
+      background: linear-gradient(90deg, #9b9b9b 40%, #232325 100%);
     }
     @media (max-width: 950px) {
       .container { padding: 16px 2vw; }
-      .product-card { min-width: 180px; }
+      .product-card { min-width: 220px; }
     }
     @media (max-width: 800px) {
       .container { max-width: 99vw; }
@@ -230,13 +227,13 @@
       top: 30%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background: rgba(186,152,85, 0.93);
+      background: rgba(34,34,34, 0.93);
       color: #fff;
       padding: 22px 36px 18px 36px;
       border-radius: 16px;
       font-size: 1.18rem;
       font-family: 'Montserrat', 'Noto Serif SC', serif;
-      box-shadow: 0 4px 24px #ba985577;
+      box-shadow: 0 4px 24px #2227;
       z-index: 9999;
       text-align: center;
       pointer-events: none;
@@ -250,7 +247,7 @@
     .survey-desc {
       margin: 0 0 26px 0;
       padding-left: 1.6em;
-      color: #ba9855;
+      color: #232325;
       font-size: 1.14rem;
       line-height: 1.7;
       font-family: 'Noto Serif SC', serif;
@@ -267,19 +264,19 @@
   </style>
 </head>
 <body>
-  <div id="music-tip" class="music-tip">
-    <span style="font-size:0.98em;color:#aaa;">Please click anywhere to enable background music</span>
-  </div>
+ <div id="music-tip" class="music-tip">
+  <span style="font-size:0.98em;color:#aaa;">Please tap anywhere to enable background music.</span>
+</div>
   <div class="navbar">Experimental Material C for Survey</div>
   <div class="container">
     <span class="title-main">Simulation of Cross-Cultural Sensory Stimulation and Online Shopping Experiences:</span>
     <span class="title-sub">Page and Music Sensory Stimulation</span>
     <ul class="survey-desc">
-      <li>Thank you for participating in this questionnaire!</li>
-      <li>This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping.</li>
-      <li>This page is for academic research purposes only, and all data will be kept strictly confidential.</li>
-      <li>Please carefully browse the page and listen to the music, then answer the questionnaire based on your true experience.</li>
-    </ul>
+  <li>Thank you for participating in this questionnaire!</li>
+  <li>This page presents a simulated online shopping website with background music, aiming to investigate how different sensory elements influence users’ emotional engagement and satisfaction with online shopping.</li>
+  <li>This page is for academic research purposes only, and all data will be kept strictly confidential.</li>
+  <li>Please carefully browse the page and listen to the music, then answer the questionnaire based on your true experience.</li>
+</ul>
     <div class="product-list">
       <div class="product-card">
         <div class="product-img">
@@ -378,7 +375,7 @@
     <meting-js
       server="netease"
       type="song"
-      id="1978269258"
+      id="1903373103"
       fixed="true"
       autoplay="true"
       loop="all"
